<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView2" >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingLeft="20dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/id_psa"
            android:id="@+id/tv_id"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/ed_id"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

    <Button
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:text="Usuń psa z bazy danych"
        android:onClick="removeDog"
        android:id="@+id/remove"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/category_change"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <RadioGroup
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="20dp">

        <RadioButton
            android:id="@+id/category_baza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baza"
            android:checked="true" />

        <RadioButton
            android:id="@+id/category_zaginione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zaginione" />

        <RadioButton
            android:id="@+id/category_adopcja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adopcja" />

    </RadioGroup>

    <Button
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:onClick="changeCategory"
        android:id="@+id/change_button"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style" />

</LinearLayout>
</ScrollView>